# tinytools

./: README  tinytools.cabal
haskell/: README
haskell/src/: AskSpirit.hs  AskSpiritCLI.hs  ParseJSON.hs
src/: AskSpirit.hs  AskSpiritCLI.hs  ParseJSON.hs  PrettyPrintNews.hs  Types.hs
